DAS-8078: Add jump to location button to the reports header and fix padding of the map

--- a/src/ReportDetailView/Header/styles.module.scss
+++ b/src/ReportDetailView/Header/styles.module.scss
@@ -137,3 +137,7 @@
     font-size: 1rem;
   }
 }
+
+.locationJumpButton {
+  margin-right: 1.5rem;
+}
